--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -1,4 +1,32 @@
-head{
+
+
+h1{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, Geneva, Tahoma, sans-serif;
     color: #fff;
-    background-color: #900c3f
+    background-color: rgb(190, 73, 137)
+    
 }
+.red{
+    color:rgb(190, 73, 137)
+}
+
+label :first-child{
+   
+    background-color: pink;
+
+
+
+}
+
+textarea{
+    width: 550px;
+    height: 100px;
+    
+}
+
+legend{
+    font-size: x-large;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
