--- a/css/flex.css
+++ b/css/flex.css
@@ -12,6 +12,7 @@ float: left;
     background-color: rgb(139, 29, 121);
     width: 80px;
     height: 80px;
+    flex-basis: 205px;
 }
 .item3{
     background-color: rgba(255, 0, 0, 0.272);
@@ -29,24 +30,31 @@ float: left;
 }
 .contenu_2{
     align-items: flex-end;
-    justify-content: space-around;
+    flex-direction: row-reverse;
+    justify-content:  center;
     border: 1px solid rgb(255, 0, 166);
     height: 200px;
-    display: flex;
-    flex-direction:row-reverse 
+    display: flex
+   
 
    
     
     
 }
-.contenu_3{
-    border: 1px solid  rgb(255, 0, 166);
-    height: 400px;
+.contenu_3{  height: 400px;
     display: flex;
+border: 1px solid  rgb(255, 0, 166) ;
+    flex-direction:column;
+    display:flex 
+    
+
 }
 .contenu_4{
     border: 1px solid  rgb(255, 0, 166);
     height: 200px;
     display: flex;
+    justify-content:right;
+
+
 }
 
