--- a/css/cubitus.css
+++ b/css/cubitus.css
@@ -1,51 +1,79 @@
 .form1{
-  border-radius: 5px 10px 15px 20px ;
+  border-radius: 5px 20px 30px 40px ;
   text-align: center;
     background-color:#059e05;
     border: 1px solid black;
     height: 90px;
     width: 90px;
     margin: 5px;
+    float: left;
+}
     
     
 .form2{
-    border-radius:20px 0px ;
+    border-radius:40px 0px ;
     text-align: center;
       background-color:#00FFFF;
       border: 1px solid black;
       height: 90px;
       width: 90px;
       margin: 5px;
+      float: left;
+    
+      
       
 
 }
 
 .form3{
-    border-radius:20px 0px ;
+    border-radius:50px 50px ;
     text-align: center;
       background-color:#7FFFD4;
       border: 1px solid black;
       height: 90px;
       width: 90px;
       margin: 5px;
+      float: left;
 }
 
 .form4{
-    border-radius:20px 0px ;
+  
+    border-radius:15px 40px ;
     text-align: center;
       background-color:#E9967A;
       border: 1px solid black;
       height: 90px;
       width: 90px;
       margin: 5px;
+      float: left;
 }
 
 .form5{
-    border-radius:20px 0px ;
-    text-align: center;
-      background-color:#FF0000;
-      border: 1px solid black;
-      height: 90px;
-      width: 90px;
-      margin: 5px;
+  border-radius:15px 40px ;
+  text-align: center;
+  
+    background-color:#FF0000;
+    border: 1px solid black;
+    height: 90px;
+    width: 90px;
+    margin: 5px;
+    float: left;
+
+.espace{
+  float: left;
+  flex-wrap: wrap;
+}
+
+
+
+    
+
+
+
+}
+   
+
+.clear{
+  clear: both;
+
 }
